--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "spatie/eloquent-sortable": "^3.8"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0",
