#feat: Drag n Drop module editor

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
                 "WEBerlei\\ContentEditorLaravel\\ContentEditorServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "WEBerlei\\ContentEditorLaravel\\ContentEditorFacade"
+                "ContentEditor": "WEBerlei\\ContentEditorLaravel\\ContentEditorFacade"
             }
         }
     },
