--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "weberlei/content-editor-laravel",
+    "name": "content-editor-laravel",
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -18,6 +18,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "babel-loader": "^8.1.0",
         "sortablejs": "^1.10.2",
         "vue": "^2.6.11"
