--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "devDependencies": {
         "cross-env": "^7.0.2",
         "laravel-mix": "^5.0.4",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.26.10",
+        "sass-loader": "^8.0.2",
         "vue": "^2.6.11",
         "vue-loader": "^15.9.3",
         "vue-template-compiler": "^2.6.11"
@@ -21,6 +24,7 @@
         "axios": "^0.19.2",
         "babel-loader": "^8.1.0",
         "sortablejs": "^1.10.2",
+        "trix": "^1.2.3",
         "vue": "^2.6.11"
     }
 }
