--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@tailwindcss/ui": "^0.5.0",
         "axios": "^0.19.2",
         "babel-loader": "^8.1.0",
         "sortablejs": "^1.10.2",
-        "trix": "^1.2.3",
-        "vue": "^2.6.11"
+        "tailwindcss": "^1.6.2",
+        "trix": "^1.2.3"
     }
 }
