--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^7.4",
-        "spatie/eloquent-sortable": "^3.8"
+        "spatie/eloquent-sortable": "^3.8",
+        "spatie/laravel-medialibrary": "^8.5"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0",
